* the store file can be fragmented
  - block range list defines the fragments ?
* what about trailing volume data that windows is hiding 0x1000 bytes in size ?
  also seen in BDE, so likely something of NTFS

Tools:
* vshadowexport
  - create tool to export a VSS volume ?
* vshadowinfo
  - print attribute flags description
* vshadowmount
  - dokan fix volume size hints

20140901
* bug fix in Python-bindings
* Code clean up

20140731
* updated dependencies
* worked on Python bindings

20140531
* updated dependencies

20140325
* worked on setup.py

20140323
* worked on Python bindings

20140131
* 2014 update
* updated dependencies

20131211
* worked on Python bindings

20131209
* worked on Python bindings
  - changed return value check of libvshadow_store_read_buffer to allow for
    non read size valid read count values

20131203
* worked on Python bindings
  - subtle bug fix where python file-like object returns an int object
    instead of long object
  - improved error reporting
* updated libcerror

20131003
* updated dependencies
* worked on setup.py, largely for MSI builds
* updated msvscpp files

20130723
* fixes for 32-bit WINAPI build of pyvshadow in file object glue code

20130721
* Changes for stand-alone libbfio build
* updated msvscpp files

20130718
* remove unnecessary restriction in library include headers
* updated dependencies

20130509
* worked on multi-threading support

20130505
* added libvshadow_volume_get_store_identifier function
* worked on multi-threading support
* slight improvement of error tolerability of catalog parsing

20130504
* added libcthreads
* worked on multi-threading support
* changes to read block descriptors on demand improves vshadowinfo preformance
* worked on tests
* fixes for multiple open/close on the same volume object
* fixed issue in read buffer due to recent changes

20130503
* added store read from file IO handle function
* vshadowmount small changes

20130501
* worked on vshadowmount Dokan support

20130417