@@ -49,7 +49,6 @@ SPEC_FILES = \
 	libvshadow.spec.in
 
 EXTRA_DIST = \
-	README.macosx \
 	$(DPKG_FILES) \
 	$(GETTEXT_FILES) \
 	$(PKGCONFIG_FILES) \
