@@ -1,17 +1,0 @@
-Mac OS X
-* missing libtoolize
-* building multiple architure binaries
-* building vshadowmount
-
-
-Missing libtoolize
-Use glibtoolize instead
-
-
-Building multiple architecture binaries
-See: http://code.google.com/p/libvshadow/wiki/Building
-
-
-Building vshadowmount
-See: http://code.google.com/p/libvshadow/wiki/Mounting
-
