@@ -12,7 +12,11 @@ features: [
 url: "https://googledrive.com/host/0B3fBvzttpiiSZDZXRFVMdnZCeHc/"
 
 [git]
-url: "https://code.google.com/p/libvshadow/"
+url: "https://github.com/libyal/libvshadow.git"
+
+[development]
+main_object: "volume"
+main_object_filename: "image.raw"
 
 [tools]
 directory: "vshadowtools"
