@@ -28,7 +28,7 @@ BEGIN
       VALUE "OriginalFilename",		"libvshadow.dll\0"
       VALUE "ProductName",		"libvshadow\0"
       VALUE "ProductVersion",		"@VERSION@" "\0"
-      VALUE "Comments",			"For more information visit http://code.google.com/p/libvshadow/\0"
+      VALUE "Comments",			"For more information visit https://github.com/libyal/libvshadow/\0"
     END
   END
   BLOCK "VarFileInfo"
