@@ -121,7 +121,7 @@ None
 .Sh NOTES
 .Sh BUGS
 Please report bugs of any kind to <joachim.metz@gmail.com> or on the project website:
-http://code.google.com/p/libvshadow/
+https://github.com/libyal/libvshadow/
 .Sh AUTHOR
 These man pages were written by Joachim Metz.
 .Sh COPYRIGHT
